@@ -35,6 +35,8 @@
 
 struct Phase;
 
+/*! \brief Structure factor type enumerator to indicate the type of
+ *  structure factor calculated. It can be time dependent (dynamical) and time independent(static)*/
 enum structure_factor_type {DYNAMICAL_STRUCTURE_FACTOR, STATIC_STRUCTURE_FACTOR};
 
 /*!>\brief calculate the end-to-end distance for the polymers of the phase
@@ -134,10 +136,11 @@ typedef int MPI_Datatype;
 int extent_density_field(const struct Phase*const p,const void *const field_pointer,
                          const char *const field_name, hid_t hdf5_type,
                          const MPI_Datatype mpi_type,const size_t data_size);
+
 //! \brief calculate the structure for each poly type
 //! \param p System to analyze
 //! \param result Pointer to array to store the result
-//! \param type Type of structure factor. 0 stands for dynamical, 1 stand for static
+//! \param sf_type Type of structure factor. 0 stands for dynamical, 1 stand for static
 //#pragma acc routine(calc_structure) seq
 int calc_structure(const struct Phase*p,soma_scalar_t*const result, const enum structure_factor_type sf_type);
 
